--- a/app/src/main/res/layout/item_expandable_file.xml
+++ b/app/src/main/res/layout/item_expandable_file.xml
@@ -18,15 +18,12 @@
         android:layout_margin="5dp"
         android:src="@drawable/ic_file_type_picture" />
 
-    <TextView
+    <com.pa.paperless.ui.MarqueeTextView
         android:id="@+id/item_file_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:ellipsize="end"
         android:gravity="center_vertical"
-        android:lines="1"
-        android:singleLine="true"
         android:textColor="@color/black"
         tools:text="圣诞快乐放假临时冻结.png" />
 
