--- a/app/src/main/res/layout/right_signin.xml
+++ b/app/src/main/res/layout/right_signin.xml
@@ -111,6 +111,16 @@
             android:gravity="center" />
 
         <Button
+            android:id="@+id/btn_delete"
+            style="@style/btn_style_pressend"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:gravity="center"
+            android:text="@string/delete_check_in_record" />
+
+        <Button
             android:id="@+id/back_btn"
             style="@style/btn_style_pressend"
             android:layout_width="wrap_content"
