--- a/app/src/main/res/layout/right_signin_item.xml
+++ b/app/src/main/res/layout/right_signin_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="30dp"
+    android:id="@+id/signin_item_root"
     android:background="@color/tableColor"
     android:orientation="horizontal">
 
@@ -61,6 +62,9 @@
         android:layout_gravity="center"
         android:layout_margin="0.5dp"
         android:layout_weight="2"
+        android:focusable="false"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp"
         android:background="#ffffff"
         android:gravity="center"
         android:textColor="@color/black"
