--- a/app/src/main/res/layout/right_webbrowse.xml
+++ b/app/src/main/res/layout/right_webbrowse.xml
@@ -71,24 +71,32 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/pro_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone"
-        app:indicatorColor="@color/loadview_color"
-        app:indicatorName="LineScalePulseOutRapidIndicator" />
-
-    <com.pa.paperless.ui.X5WebView
-        android:id="@+id/web_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible" />
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_height="0dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/web_url_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/web_url_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible" />
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/pro_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:indicatorColor="@color/loadview_color"
+            app:indicatorName="LineScalePulseOutRapidIndicator" />
+
+        <com.pa.paperless.ui.X5WebView
+            android:id="@+id/web_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
+    </LinearLayout>
 </LinearLayout>
